[ws-daemon] Support proc mount API

--- a/chart/templates/ws-daemon-daemonset.yaml
+++ b/chart/templates/ws-daemon-daemonset.yaml
@@ -174,5 +174,6 @@ spec:
           containerPort: 9500
         securityContext:
           privileged: true
+          procMount: unmasked
 {{ toYaml .Values.defaults | indent 6 }}
 {{ end }}
